--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 :root {
     --cor-de-fundo: #000000;
-    --branco: #ff6b6b;
+    --branco: #bbbbbb;
     --laranja: #000000;
     --azul-degrade: linear-gradient(97.54deg, #fdf7f7 35.49%, #000000 165.37%);
     --fonte-principal: "Poppins";
